[Code Highlight] Fix to prevent code overflow

--- a/src/Knp/IpsumBundle/Resources/public/css/highlight.css
+++ b/src/Knp/IpsumBundle/Resources/public/css/highlight.css
@@ -7,7 +7,8 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 pre code {
   display: block; padding: 0.5em;
   color: #000;
-  background: #f8f8ff
+  background: #f8f8ff;
+  overflow: auto;
 }
 
 pre .comment,
